--- a/docs/controls/c-0002.md
+++ b/docs/controls/c-0002.md
@@ -1,16 +1,22 @@
-## Framework
-MITRE, NSA, ClusterScan, AllControls, ArmoBest
+# C-0002 - Exec into container
+
+## Frameworks
+* MITRE
+* NSA
+* ClusterScan
+* AllControls
+* ArmoBest
  
 ## Severity
 Medium
 
-## Description of the the issue
+## Description of the issue
 Attackers who have permissions, can run malicious commands in containers in the cluster using exec command (“kubectl exec”). In this method, attackers can use legitimate images, such as an OS image (e.g., Ubuntu) as a backdoor container, and run their malicious code remotely by using “kubectl exec”.
  
 ## Related resources
 ClusterRole, ClusterRoleBinding, Role, RoleBinding
  
-## What does this control test
+## What this control tests 
 Check which subjects have RBAC permissions to exec into pods– if they have the “pods/exec” verb.
  
 ## Remediation
