--- a/docs/controls/c-0004.md
+++ b/docs/controls/c-0004.md
@@ -1,39 +1,39 @@
-## Framework
-DevOpsBest, AllControls, WorkloadScan
+# C-0004 - Resources memory limit and request
+
+## Frameworks
+* DevOpsBest
+* AllControls
+* WorkloadScan
  
 ## Severity
 High
 
-## Description of the the issue
-This control identifies all Pods for which the memory limit is not set.Note, this control is configurable. See below the details.
+## Description of the issue
+This control identifies all Pods for which the memory limit is not set. Note, [this control is configurable](#configuration-parameters).
  
 ## Related resources
 CronJob, DaemonSet, Deployment, Job, Pod, ReplicaSet, StatefulSet
  
-## What does this control test
+## What this control tests 
 This control identifies all Pods for which the memory limit is not set.
  
 ## Remediation
 Set the memory limit or use exception mechanism to avoid unnecessary notifications.
  
-## Configuration
- This control can be configured using the following parameters. Read CLI/UI documentation about how to change parameters.
+## Configuration parameters 
+ You can adjust the configuration of this control to suit your specific environment. [Read the documentation on configuring controls](../frameworks-and-controls/configuring-controls.md) to learn more.
  
-### memory_request_max
-[memory_request_max](doc:configuration_parameter_memory_request_max)
-Ensure memory max requests are set
+* [memory_request_max](../frameworks-and-controls/configuring-controls.md#memory_request_max):
+Ensure a memory resource request is set and is under this defined maximum value.
  
-### memory_request_min
-[memory_request_min](doc:configuration_parameter_memory_request_min)
-Ensure memory min requests are set
+* [memory_request_min](../frameworks-and-controls/configuring-controls.md#memory_request_min):
+Ensure a memory resource request is set and is above this defined minimum value.
  
-### memory_limit_max
-[memory_limit_max](doc:configuration_parameter_memory_limit_max)
-Ensure memory max limits are set
+* [memory_limit_max](../frameworks-and-controls/configuring-controls.md#memory_limit_max):
+Ensure a memory resource limit is set and is under this defined maximum value.
  
-### memory_limit_min
-[memory_limit_min](doc:configuration_parameter_memory_limit_min)
-Ensure memory min limits are set
+* [memory_limit_min](../frameworks-and-controls/configuring-controls.md#memory_limit_min):
+Ensure a memory resource limit is set and is under this defined maximum value.
  
 ## Example
 ```
