--- a/docs/controls/c-0007.md
+++ b/docs/controls/c-0007.md
@@ -1,16 +1,20 @@
-## Framework
-MITRE, ClusterScan, AllControls
+# C-0007 - Data Destruction
+
+## Frameworks
+* MITRE
+* ClusterScan
+* AllControls
  
 ## Severity
 Medium
 
-## Description of the the issue
+## Description of the issue
 Attackers may attempt to destroy data and resources in the cluster. This includes deleting deployments, configurations, storage, and compute resources.
  
 ## Related resources
 ClusterRole, ClusterRoleBinding, Role, RoleBinding
  
-## What does this control test
+## What this control tests 
 Check which subjects have delete/deletecollection RBAC permissions on workloads.
  
 ## Remediation
